--- a/pedidos.html
+++ b/pedidos.html
@@ -29,24 +29,11 @@
 <main>
  <section id="productos">
    <h2> Pedir </h2>
-   <div class="derecha">
-      <ul id="galeria">
-        <li><img src="img/sabor1.jpg" alt="#" title="#" onclick="cambiar();" /></li>
-        <li><img src="img/sabor2.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor3.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor4.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor5.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor6.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor7.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor8.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor9.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor10.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor11.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-        <li><img src="img/sabor12.jpg" alt="#" title="#" onclick="cambiar();"/></li>
-      </ul>
-    <br>
-    </div id="cobro">
+  
     <div>
+      <select id="listaDeGustos" name="gustos">
+      </select>
+
       
     </div>
     <div>
