--- a/pedidos.html
+++ b/pedidos.html
@@ -31,7 +31,7 @@
    <h2> Pedir </h2>
   
     <div>
-      <select id="listaDeGustos" name="gustos">
+      <select id="listaDeGustos" onchange="myFunction();" name="gustos">
       </select>
 
       
